package interfaces;

public interface AbleToModify{
    void modifyStuff(Modifiable modifiable);
}
