package interfaces;

public interface Doable {
    String doTo(String name, String action, String target);
}
