package interfaces;

public interface Explainable {
    String explain(String name, String action);
}
