package interfaces;

public interface Thinkable {
    String think(String name, String action, String durationOfThinking);
}
